Improve issue icon vertical alignment
Fixes: https://github.com/go-gitea/gitea/issues/15386

--- a/web_src/less/shared/issuelist.less
+++ b/web_src/less/shared/issuelist.less
@@ -15,6 +15,10 @@
       margin-right: .75rem;
     }
 
+    .issue-item-left {
+      margin-top: 2.1px;
+    }
+
     .issue-item-icons-right > * + * {
       margin-left: .5rem;
     }
